--- a/views/editorial.html
+++ b/views/editorial.html
@@ -104,21 +104,21 @@
                         <img src="../assets/media/libros/fantasia/rey-maldito.jpg" alt="El Rey malvado">
                         <h2>El Rey malvado</h2>
                         <p>$2.500</p>
-                        <a href="#" class="btn"><i class="fas fa-chevron-up"></i></a>
+                        <a href="./hidra.html" class="btn"><i class="fas fa-chevron-up"></i></a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="lo poco q sabemos">
                         <h2>Lo poco que sabemos</h2>
                         <p>$2.190</p>
-                        <a href="#" class="btn"><i class="fas fa-chevron-up"></i></a>
+                        <a href="./puck.html" class="btn"><i class="fas fa-chevron-up"></i></a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                         <img src="../assets/media/libros/ficcion/boulevard.jpg" alt="Boulevard">
                         <h2>Boulevard</h2>
                         <p>$1.799</p>
-                        <a href="#" class="btn"><i class="fas fa-chevron-up"></i></a>
+                        <a href="./naranja.html" class="btn"><i class="fas fa-chevron-up"></i></a>
                     </div>
                 </div>
     
