--- a/views/productos.html
+++ b/views/productos.html
@@ -99,7 +99,7 @@
                     <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="bajo-las-estrellas">
                     <h2>Bajo las Estrellas</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./bajolasestrellas.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
