--- a/views/riverdale.html
+++ b/views/riverdale.html
@@ -5,13 +5,13 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<meta name="keywords" content="Atenas, Libros, Libreria, bajo las estrellas, Tienda online, Envios Gratis">
+<meta name="keywords" content="Atenas, Libros, Libreria, riverdale, Tienda online, Envios Gratis">
 <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAJO LAS ESTRELLAS-comprar en Atenas</title>
+    <title>RIVERDALE-comprar en Atenas</title>
 </head>
 <body>
     <header>
@@ -64,9 +64,9 @@
                                 class="fas fa-long-arrow-alt-left"></i> Home</a>
                     </li>
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
-                            href="../views/romantico.html"> Romantico </a>
+                            href="../views/romantico.html"> Ficción </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Bajo las Estrellas </p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Riverdale</p>
                     </li>
                 </ul>
             </nav>
@@ -78,7 +78,7 @@
         <div class="container product-page">
             <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="Bajo las estrellas">
             <div class="info-libro">
-                <h1>BAJO LAS ESTRELLAS</h1>
+                <h1>RIVARDALE, EL DÍA ANTERIOR</h1>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
