--- a/views/sabrina.html
+++ b/views/sabrina.html
@@ -5,13 +5,13 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<meta name="keywords" content="Atenas, Libros, Libreria, riverdale, Tienda online, Envios Gratis">
+<meta name="keywords" content="Atenas, Libros, Libreria, sabrina, ficcion, Tienda online, Envios Gratis">
 <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RIVERDALE-comprar en Atenas</title>
+    <title>RSABRINA-comprar en Atenas</title>
 </head>
 <body>
     <header>
@@ -66,7 +66,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/ficcion.html"> Ficción </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Riverdale</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Sabrina</p>
                     </li>
                 </ul>
             </nav>
@@ -76,9 +76,9 @@
 
     <main>
         <div class="container product-page">
-            <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="riverdale, el dia anterior">
+            <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sanbrina, el camino de la bruja">
             <div class="info-libro">
-                <h1>RIVARDALE, EL DÍA ANTERIOR</h1>
+                <h1>SABRINA, EL DÍA ANTERIOR</h1>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -115,7 +115,10 @@
 
         <div class="container about-libro">
             <h2>Acerca del libro</h2>
-            <p>Conoceremos cómo era la lujosa vida de, la muy insoportable, Verónica Lodge en Manhattan y porqué termina en un pueblo sin glamour como Riverdale; qué tal la iba a Betty Cooper en sus prácticas en una revista de Los Ángeles; cómo Jughead Jones se entera de quién es realmente su padre y cómo intenta sobrevivir; y por último porqué Archie Andrews ha cambiado tanto de repente, engaña a sus seres queridos y deja tirados a sus amigos.</p>
+            <p>Se trata de una adolescente que desciende de una familia de brujos por parte de su padre y debe decidir si quiere seguir sus pasos o si decide vivir como una “mortal”, como su madre y sus amigos.
+                <br>
+            Sabrina sabe que dentro de muy poco, en su cumpleaños, tendrá que firmar en El Libro de la Bestia y entregarle su alma a Satán. Sin embargo, las dudas le corroen. ¿Eso querrá decir que tendrá que abandonar por completo a sus amigos mortales y, especialmente, a su novio Harvey? 
+            </p>
         </div>
     </main>
 
