--- a/views/lopocoquesabemos.html
+++ b/views/lopocoquesabemos.html
@@ -5,13 +5,13 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<meta name="keywords" content="Atenas, Libros, Libreria, sabrina, ficcion, Tienda online, Envios Gratis">
+<meta name="keywords" content="Atenas, Libros, Libreria, lo poco que sabemos, ficcion, Tienda online, Envios Gratis">
 <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SABRINA-comprar en Atenas</title>
+    <title>LO POCO QUE SABEMOS-comprar en Atenas</title>
 </head>
 <body>
     <header>
@@ -66,7 +66,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/ficcion.html"> Ficción </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Sabrina</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Lo poco que sabemos</p>
                     </li>
                 </ul>
             </nav>
@@ -76,9 +76,9 @@
 
     <main>
         <div class="container product-page">
-            <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sanbrina, el camino de la bruja">
+            <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="Lo poco que sabemos">
             <div class="info-libro">
-                <h1>SABRINA, EL CAMINO DE LA BRUJA</h1>
+                <h1>LO POCO QUE SABEMOS</h1>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -86,7 +86,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>$1.500</p>
+                <p>$2.190</p>
                 <div class="payment-icons">
                     <div class="icons">
                         <i class="fab fa-cc-visa"></i>
@@ -115,8 +115,7 @@
 
         <div class="container about-libro">
             <h2>Acerca del libro</h2>
-            <p>
-            Sabrina sabe que dentro de muy poco, en su cumpleaños, tendrá que firmar en El Libro de la Bestia y entregarle su alma a Satán. Sin embargo, las dudas le corroen. ¿Eso querrá decir que tendrá que abandonar por completo a sus amigos mortales y, especialmente, a su novio Harvey? 
+            <p>¿Una pelea puede acabar con una amistad de toda una vida? ... Y la persona que le salva la vida es Hannah. Mientras Luke intenta encontrarle sentido a su experiencia cercana a la muerte, se vuelve muy cercano a Hannah, quien se convierte en su mayor confidente. 
             </p>
         </div>
     </main>
