--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -131,14 +131,14 @@
                     <img src="../assets/media/libros/ficcion/lo-poco-que-sabemos.png" alt="lo poco que sabemos">
                     <h2>Lo poco que sabemos</h2>
                     <p>$2.190</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./lopocoquesabemos.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/riverdale.jpg" alt="Riverdale">
                     <h2>Riverdale, El día anterior</h2>
                     <p>$1.550</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./riverdale.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
@@ -168,7 +168,7 @@
                     <img src="../assets/media/libros/ficcion/sabrina.jpg" alt="Sabrina">
                     <h2>Sabrina, el camino de la Bruja</h2>
                     <p>$1.550</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./sabrina.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
