--- a/views/romantico.html
+++ b/views/romantico.html
@@ -121,7 +121,7 @@
                         <img src="../assets/media/libros/romantico/bajo-las-estrellas.jpg" alt="bajo las estrellas">
                         <h2>Bajo las estrellas</h2>
                         <p>$1.399</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./bajolasestrellas.html" class="btn">Comprar</a>
                     </div>
                 </div>
     
