--- a/views/fantasia.html
+++ b/views/fantasia.html
@@ -113,10 +113,10 @@
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
-                    <img src="../assets/media/libros/fantasia/lore.png" alt="">
+                    <img src="../assets/media/libros/fantasia/lore.png" alt="lore">
                     <h2>Lore</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
