--- a/views/productos.html
+++ b/views/productos.html
@@ -152,7 +152,7 @@
                     <img src="../assets/media/libros/fantasia/lore.png" alt="Lore">
                     <h2>Lore</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
 
@@ -246,7 +246,7 @@
                         alt="los manuscritos rojos de la magia">
                     <h2>Serás</h2>
                     <p>$1.399</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./manuscritosrojos.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
