--- a/views/productos.html
+++ b/views/productos.html
@@ -215,7 +215,7 @@
                         alt="Boulevard">
                     <h2>Boulevard</h2>
                     <p>$1.799</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./boulevard.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
