--- a/views/productos.html
+++ b/views/productos.html
@@ -243,10 +243,10 @@
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
                     <img src="../assets/media/libros/ficcion/serás.png"
-                        alt="los manuscritos rojos de la magia">
+                        alt="seras">
                     <h2>Serás</h2>
                     <p>$1.399</p>
-                    <a href="./manuscritosrojos.html" class="btn">Comprar</a>
+                    <a href="./seras.html" class="btn">Comprar</a>
                 </div>
             </div>
             <!-- row -->
@@ -255,7 +255,7 @@
                     <img src="../assets/media/libros/ficcion/los-siete.jpg" alt="los siete marido de evelyn hugo">
                     <h2>Los siete maridos de Evelyn Hugo</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
                 <!-- card -->
                 <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
