--- a/views/seras.html
+++ b/views/seras.html
@@ -5,13 +5,13 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 <link rel="stylesheet" href="../assets/css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-<meta name="keywords" content="Atenas, Libros, Libreria, a dos metros de ti, ficcion, Tienda online, Envios Gratis">
+<meta name="keywords" content="Atenas, Libros, Libreria, serás, ficcion, Tienda online, Envios Gratis">
 <meta name="description"
         content="Todos los Libros que necesitas/buscas, en un solo lugar. Envios gratis en pedidos mayores a $3000. Recibi tu pedido en tu casa sin demoras.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A DOS METROS DE TI-comprar en Atenas</title>
+    <title>SERÁS-comprar en Atenas</title>
 </head>
 <body>
     <header>
@@ -66,7 +66,7 @@
                     <li class="bread-lista__item"><a class="bread__link bread__link--back"
                             href="../views/ficcion.html"> Ficción </a>
                     </li>
-                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> A dos metros de ti</p>
+                    <li class="bread-lista__item"><p class="bread__link bread__link--red"> Serás</p>
                     </li>
                 </ul>
             </nav>
@@ -76,9 +76,9 @@
 
     <main>
         <div class="container product-page">
-            <img src="../assets/media/libros/ficcion/dos-metros-de-ti.png" alt="A DOS METROS DE TI">
+            <img src="../assets/media/libros/ficcion/serás.png" alt="SERÁS">
             <div class="info-libro">
-                <h1>A DOS METROS DE TI</h1>
+                <h1>SERÁS</h1>
                 <div class="star">
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
@@ -86,7 +86,7 @@
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
                 </div>
-                <p>$1.590</p>
+                <p>$1.399</p>
                 <div class="payment-icons">
                     <div class="icons">
                         <i class="fab fa-cc-visa"></i>
@@ -116,7 +116,7 @@
         <div class="container about-libro">
             <h2>Acerca del libro</h2>
             <p>
-                Dos adolescentes, Stella y Will, se encuentran en un hospital debido a las graves enfermedades que padecen y que amenazan su vida. Poco a poco comienzan a conocerse y enamorarse, pero deberán enfrentarse a las reglas hospitalarias que los alejan
+                En Serás, Liz participa de una red social escolar bajo el nombre de Lady Macbeth - continúa contando Anna - Allí conoce a un usuario que se llama Shylock. A los dos los unen los libros y la literatura. A partir de ese momento, comienza a soltarse y a mostrarse tal cual es. Por eso, el libro se llama Serás
             </p>
         </div>
     </main>
