--- a/views/ficcion.html
+++ b/views/ficcion.html
@@ -121,7 +121,7 @@
                     <img src="../assets/media/libros/ficcion/los-siete.jpg" alt="los siete maridos de evelyn hugo">
                     <h2>Los siete maridos de Evelyn Hugo</h2>
                     <p>$1.990</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="./terror.html" class="btn">Comprar</a>
                 </div>
             </div>
 
