--- a/views/romantico.html
+++ b/views/romantico.html
@@ -107,7 +107,7 @@
                         <img src="../assets/media/libros/romantico/atraves-1749.jpg" alt="a traves de mi ventana">
                         <h2>A través de mi ventana</h2>
                         <p>$1.749</p>
-                        <a href="#" class="btn">Comprar</a>
+                        <a href="./ventana.html" class="btn">Comprar</a>
                     </div>
                     <!-- card -->
                     <div class="card__body col-12 col-sm-12 col-md-6 col-lg-6 col-xl-3">
