--- a/views/productos.html
+++ b/views/productos.html
@@ -4,8 +4,8 @@
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-        <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <meta charset="UTF-8">
     <meta name="keywords"
         content="Atenas, Libros, Libreria, Harry Potter, Lore, Ficcion, Romance, Tienda online, Envios Gratis">
@@ -52,19 +52,24 @@
                                         aria-label="Search" autocomplete="off">
                                     <button class="btn btn-outline-success search-btn">Buscar</button>
                                 </form>
-                                <button type="button" class="btn bg-white btn-primary p-0 mx-3 border-0 border-radius" data-bs-target="#modalCart" data-bs-toggle="modal"><i class="carrito fab fa-shopify"></i></button>
+                                <button type="button" class="btn bg-white btn-primary p-0 mx-3 border-0 border-radius"
+                                    data-bs-target="#modalCart" data-bs-toggle="modal"><i
+                                        class="carrito fab fa-shopify"></i></button>
+                                <button type="button" data-bs-target="#modalDatos" data-bs-toggle="modal"
+                                    class="btn-modal-datos-cart btn btn-outline-success"><i
+                                        class="fas fa-user"></i></button>
                             </div>
                         </nav>
                     </div>
                 </nav>
             </div>
         </div>
-        
+
         <div class="container-fluid content-bread">
             <nav class="bread-libros">
                 <ul class="bread-lista">
                     <li class="bread-lista__item"><a class="bread__link bread__link--back" href="../index.html"><i
-                        class="fas fa-long-arrow-alt-left"></i> Inicio</a>
+                                class="fas fa-long-arrow-alt-left"></i> Inicio</a>
                     </li>
                     <li class="bread-lista__item"><a class="bread__link bread__link--red" href="#"> Libros</a>
                     </li>
@@ -78,44 +83,79 @@
             <h1>Escoge el genero</h1>
             <p>Te recomendamos seleccionar la categoria de <strong>Libro</strong> que te interese para facilitar tu
                 búsqueda.</p>
-            </div>
+        </div>
 
 
         <!-- filtros -->
         <div class="container navbar-filtros">
             <div class="generos__filtros">
-                <a class="filterCategory" id="fantasy" >Fantasy</a>
-                <a class="filterCategory" id="fiction" >Fiction</a>
-                <a class="filterCategory" id="terror" >Terror</a>
-                <a class="filterCategory" id="romance" >Romance</a>
+                <a class="filterCategory" id="fantasy">Fantasy</a>
+                <a class="filterCategory" id="fiction">Fiction</a>
+                <a class="filterCategory" id="terror">Terror</a>
+                <a class="filterCategory" id="romance">Romance</a>
             </div>
         </div>
     </main>
 
+    <!-- modal datos personales -->
+    <div id="modalDatos" class="modal" tabindex="-1">
+        <div class="modal-dialog modal-fullscreen-sm-down">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">you cannot buy anything without completing the data</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="container-fluid">
 
-    
-    <!-- Scrollable modal -->
-    
-        <div class="modal fade" id="modalCart" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3>carrito de compras</h3>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <form id="form-personalData d-flex" autocomplete="off">
+                            <div class="row" style="margin-bottom: 10px;">
+                                <input type="text" name="name" id="inputName-data" placeholder="first name" class="col-md-6 col-ms-auto">
+                                <select name="cardType" id="cardType-data" class="col-md-6 col-ms-auto">
+                                    <option disabled selected>choose an option</option>
+                                    <option value="visa">Visa</option>
+                                    <option value="mastercard">MasterCard</option>
+                                </select>
+                            </div>
+                            <div class="row" style="margin-bottom: 10px;">
+                                <input type="text" name="address" id="address-data" placeholder="delivery address" class="col-md-6 col-ms-auto">
+                                <input type="number" name="cardNumber" id="cardNumber-data" placeholder="card number" class="col-md-6 col-ms-auto">
+                            </div>
+                            <div class="btn-content d-flex" style="justify-content: center;">
+                                <button class="btn btn-primary">Save changes</button>
+                            </div>
+                        </form>
+
                     </div>
-                    <div class="modal-body">
-                        <div class="row cartContainer mx-0">                        </div> 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="restoreCart" class="btn btn-danger">Restore Cart</button>
-                        <button type="button" id="btn-buy-cartItems" class="btn btn-success">Buy</button>
-                    </div>
+                </div>
+                <div class="modal-footer">
                 </div>
             </div>
         </div>
-        
-    
-    
+    </div>
+
+
+    <!-- Scrollable modal -->
+    <div class="modal fade" id="modalCart" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h3>shopping cart</h3>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="row cartContainer mx-0"> </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" id="restoreCart" class="btn btn-danger">Restore Cart</button>
+                    <button type="button" id="btn-buy-cartItems" class="btn btn-success">Buy</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- footer -->
     <footer class="container-fluid">
         <div class="row">
@@ -177,7 +217,7 @@
         integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous">
     </script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    
+
 </body>
 
 </html>
